--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-# Prerequisites
-*.d
-
 # Compiled Object files
 *.slo
 *.lo
 *.o
 *.obj
+*.d
+*.tmp
 
 # Precompiled Headers
 *.gch
@@ -15,10 +14,6 @@
 *.so
 *.dylib
 *.dll
-
-# Fortran module files
-*.mod
-*.smod
 
 # Compiled Static libraries
 *.lai
@@ -30,3 +25,28 @@
 *.exe
 *.out
 *.app
+
+# Temp Files
+.DS_Store
+*.swp
+*~
+/build
+
+# log files
+*.log
+
+# IDEA
+.idea
+cmake-build-debug
+
+# Editor files/directories
+/.vscode
+/.vs
+/CMakeSettings.json
+.projections.json
+
+# vcpkg
+/vcpkg_installed
+
+# Other
+.tmp.dprobes.h
