--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,7 +28,9 @@ jobs:
         submodules: recursive
 
     - name: Install Packages
-      run: brew install pkg-config
+      run: |
+        brew install pkg-config
+        brew install google-benchmark
       if: matrix.os != 'ubuntu-latest'
 
     - name: Configure CMake
